tests/parser/bad/exps/exp_t-spid-spid-with.scilexp
let id = fun(x:Bool) => fun (y:Bool) => x in
let true = True in
id true builtin (* not a valid arguments *)
